added js to enhance things, finalized responsiveness (i think)

--- a/Events.html
+++ b/Events.html
@@ -7,6 +7,8 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
 </head>
 <body>
 <div id="siteContainer">
@@ -55,10 +57,13 @@
 		<div class="eventBox"> 
 				<img src="images/event1.png" alt="trees" class="eventImg web event1">
 				<img src="images/event1mob.png" alt="trees" class="eventImg mobileImg event1">
+				<img src="images/event1tab.png" alt="trees" class="eventImg tabImg event1">
 				<img src="images/event2.png" alt="canoe under bridge" class="eventImg web event2">
 				<img src="images/event2mob.png" alt="canoe under bridge" class="eventImg mobileImg event2">
+				<img src="images/event2tab.png" alt="trees" class="eventImg tabImg event2">
 				<img src="images/event3.png" alt="bridge and river" class="eventImg web event2">
 				<img src="images/event3mob.png" alt="bridge and river" class="eventImg mobileImg event3">
+				<img src="images/event3tab.png" alt="trees" class="eventImg tabImg event3">
 					<p id="eventTitle1">Stream Habitat Work Party, <br>October 13, 2018</p>
 					<p id="eventTitle2">Annual TRAA Paddle & Fish, <br>July 14, 2018</p>
 					<p id="eventTitle3">Stream Habitat Work Party, <br>July 12, 2018</p>
@@ -67,10 +72,13 @@
 					<a href="#" class="eventButtons evButton3">See More</a>
 				<img src="images/event4.png" alt="broken roof" class="eventImg web event4">
 				<img src="images/event4mob.png" alt="broken roof" class="eventImg mobileImg event4">
+				<img src="images/event4tab.png" alt="trees" class="eventImg tabImg event4">
 				<img src="images/event5.png" alt="kids in river" class="eventImg web event5">
 				<img src="images/event5mob.png" alt="kids in river" class="eventImg mobileImg event5">
+				<img src="images/event5tab.png" alt="trees" class="eventImg tabImg event5">
 				<img src="images/event6.png" alt="London Show" class="eventImg web event6">	
 				<img src="images/event6mob.png" alt="London Show" class="eventImg mobileImg event6">	
+				<img src="images/event6tab.png" alt="trees" class="eventImg tabImg event6">
 					<p id="eventTitle4">Work Party Hatchery Roof Repair, <br>June 30, 2018</p>
 					<p id="eventTitle5">Rainbow Trout Release, <br>June 23 2018</p>
 					<p id="eventTitle6">TRAA Showtime, <br>Feb 23-25 2017</p>
@@ -79,10 +87,13 @@
 					<a href="#" class="eventButtons evButton6">See More</a>
 				<img src="images/event7.png" alt="guys release fish" class="eventImg web event7">
 				<img src="images/event7mob.png" alt="broken roof" class="eventImg mobileImg event7">
+				<img src="images/event7tab.png" alt="trees" class="eventImg tabImg event7">
 				<img src="images/event8.png" alt="family in river" class="eventImg web event8">
 				<img src="images/event8mob.png" alt="broken roof" class="eventImg mobileImg event8">
+				<img src="images/event8tab.png" alt="trees" class="eventImg tabImg event8">
 				<img src="images/event9.png" alt="family on dock" class="eventImg web event9">
 				<img src="images/event9mob.png" alt="broken roof" class="eventImg mobileImg event9">	
+				<img src="images/event9tab.png" alt="trees" class="eventImg tabImg event9">
 					<p id="eventTitle7">Rainbow Trout Release, <br>June 16 2017</p>
 					<p id="eventTitle8">Brook Trout Release, <br>May 17 2017</p>
 					<p id="eventTitle9">Family Fishing Day Fanshawe C.A, <br>July 9 2016</p>
@@ -91,10 +102,13 @@
 					<a href="#" class="eventButtons evButton9">See More</a>
 				<img src="images/event10.png" alt="guys with bucket" class="eventImg web event10">
 				<img src="images/event10mob.png" alt="broken roof" class="eventImg mobileImg event10">
+				<img src="images/event10tab.png" alt="trees" class="eventImg tabImg event10">
 				<img src="images/event11.png" alt="river clean-up" class="eventImg web event11">
 				<img src="images/event11mob.png" alt="broken roof" class="eventImg mobileImg event11">
+				<img src="images/event11tab.png" alt="trees" class="eventImg tabImg event11">
 				<img src="images/event12.png" alt="angling sport logo" class="eventImg web event12">	
 				<img src="images/event12mob.png" alt="broken roof" class="eventImg mobileImg event12">
+				<img src="images/event12tab.png" alt="trees" class="eventImg tabImg event12">
 					<p id="eventTitle10">Brown Trout Release, <br>May 2 2016</p>
 					<p id="eventTitle11">Thames River Clean-Up, <br>May 7 2016</p>
 					<p id="eventTitle12">Angling Sports BBQ, <br>May 7 2016</p>
@@ -103,10 +117,13 @@
 					<a href="#" class="eventButtons evButton12">See More</a>
 				<img src="images/event13.png" alt="wooden stairs" class="eventImg web event13">
 				<img src="images/event13mob.png" alt="broken roof" class="eventImg mobileImg event13">
+				<img src="images/event13tab.png" alt="trees" class="eventImg tabImg event13">
 				<img src="images/event14.png" alt="family canoe" class="eventImg web event14">
 				<img src="images/event14mob.png" alt="broken roof" class="eventImg mobileImg event14">
+				<img src="images/event14tab.png" alt="trees" class="eventImg tabImg event14">
 				<img src="images/event15.png" alt="father daughter fishing" class="eventImg web event15">
 				<img src="images/event15mob.png" alt="broken roof" class="eventImg mobileImg event15">	
+				<img src="images/event15tab.png" alt="trees" class="eventImg tabImg event15">
 					<p id="eventTitle13">TRAA Projects Trout Hatchery <br>Interior & Stairway Update</p>
 					<p id="eventTitle14">3rd Annual TRAA Paddle & Fish, <br>July 18 2015</p>
 					<p id="eventTitle15">Family Fishing Day Fanshawe C.A, <br>July 11 2015</p>
@@ -115,10 +132,13 @@
 					<a href="#" class="eventButtons evButton15">See More</a>
 				<img src="images/event16.png" alt="movie cover" class="eventImg web event16">
 				<img src="images/event16mob.png" alt="broken roof" class="eventImg mobileImg event16">
+				<img src="images/event16tab.png" alt="trees" class="eventImg tabImg event16">
 				<img src="images/event17.png" alt="children with bucket" class="eventImg web event17">
 				<img src="images/event17mob.png" alt="broken roof" class="eventImg mobileImg event17">
+				<img src="images/event17tab.png" alt="trees" class="eventImg tabImg event17">
 				<img src="images/event18.png" alt="steelhead fish" class="eventImg web event18">
 				<img src="images/event18mob.png" alt="broken roof" class="eventImg mobileImg event18">	
+				<img src="images/event18tab.png" alt="trees" class="eventImg tabImg event18">
 					<p id="eventTitle16">TRAA Presents Film <br>DamNation @ Wolfe <br>Performance Hall, <br>June 18 2015</p>
 					<p id="eventTitle17">Rainbox Trout Release, <br>June 22 2015</p>
 					<p id="eventTitle18">Steelhead Tagging and Monitoring Finish</p>
@@ -129,8 +149,10 @@
 				<div id="evBottom">
 				<img src="images/event19.png" alt="workers and new equipment" class="eventImg web event19">
 				<img src="images/event19mob.png" alt="broken roof" class="eventImg mobileImg event19">
+				<img src="images/event19tab.png" alt="trees" class="eventImg tabImg event19">
 				<img src="images/event20.png" alt="baby fish" class="eventImg web event20">	
 				<img src="images/event20mob.png" alt="broken roof" class="eventImg mobileImg event20">
+				<img src="images/event20tab.png" alt="trees" class="eventImg tabImg event20">
 					<p id="eventTitle19">TRAA Hatchery Equipment Upgrades & Building Renovations</p>
 					<p id="eventTitle20">Rainbow Trout Release</p>
 					<a href="#" class="eventButtons evButton19">See More</a>
