--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
 </head>
 <body>
 <div id="siteContainer">
@@ -46,6 +48,7 @@
 				<div class="contImageCon">
 					<img src="images/cont1.png" alt="traa members" class="web">
 					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
+					<img src="images/cont1tab.png" alt="traa members" class="tabImg">
 					<img src="images/cont2.png" alt="foggy lake" class="web">
 				</div>
 				<div id="cont1TextCon">
@@ -61,6 +64,7 @@
 				</div>
 				<div class="contImageCon">
 					<img src="images/cont2mob.png" alt="foggy lake" class="mobileImg">
+					<img src="images/cont2tab.png" alt="foggy lake" class="tabImg">
 				</div>
 		</div>
 	</div>
@@ -123,6 +127,7 @@
 				<div id="memImageCon">
 					<img src="images/cont1.png" alt="traa members" class="web">
 					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
+					<img src="images/cont1tab.png" alt="traa members" class="tabImg">
 					<img src="images/cont2.png" alt="foggy lake"  class="web">
 				</div>
 				<div id="memTextCon">
