--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
 </head>
 <body>
 <div id="siteContainer">
@@ -193,6 +195,7 @@
 				<div class="businessesImg">
 					<img src="images/bus1.png" alt="Melchers logo" class="web">
 					<img src="images/bus1mob.png" alt="Melchers logo" class="mobileImg">
+					<img src="images/bus1tab.png" alt="Melchers logo" class="tabImg">
 				</div>
 				<div class="businessText">
 					<p>Over the past couple of years the folks at Melchers Construction Ltd have offered up their beautiful boardroom for TRAA executive meetings. It's an ideal space with all the amenities required for us to accomplish all the "behind the scenes" work of the TRAA. Many thanks go out to the continued support of Melchers Construction Ltd.</p>
@@ -203,6 +206,7 @@
 				<div class="businessesImg">
 					<img src="images/bus2.png" alt="Guillevin Greentech logo" class="web">
 					<img src="images/bus2mob.png" alt="Melchers logo" class="mobileImg">
+					<img src="images/bus2tab.png" alt="Melchers logo" class="tabImg">
 				</div>
 				<div class="businessText">
 					<p>Members of the trout hatchery rotation know the woes we've had with lighting in the hatchery. Even with larger fixtures installed a few years ago, it was still frustrating on days when the mercury dipped below -15C and the fluorescent technology just teased us with its dull flicker. Enter Mike Jeffries of Guillevin Greentech in London with nice set of bright and dependable (and new!) LED fixtures. Once they were installed it was like working in well-appointed laboratory.</p>
@@ -212,7 +216,8 @@
 			<div class="businesses">
 				<div class="businessesImg">
 					<img src="images/bus3.png" alt="Muma Manufacturing logo" class="web">
-					<img src="images/bus3mob.png" alt="Melchers logo" class="mobileImg">
+					<img src="images/bus3mob.png" alt="Muma Manufacturing logo" class="mobileImg">
+					<img src="images/bus3tab.png" alt="Muma Manufacturing logo" class="tabImg">
 				</div>
 				<div class="businessText">
 					<p>The TRAA voted unanimously to re-name the TRAA trout hatchery honouring Keith Wales' memory and his unselfish support of the TRAA's work in the London area, in particular Komoka Creek. Special thanks go out to Muma Manufacturing in St. Thomas for donating the beautiful laser-cut aluminum sign.</p>
@@ -222,7 +227,9 @@
 			<div class="businesses">
 				<div class="businessesImg">
 					<img src="images/bus4.png" alt="Try Recycling Logo" class="web">
-					<img src="images/bus4mob.png" alt="Melchers logo" class="mobileImg">
+					<img src="images/bus4mob.png" alt="Try Recycling logo" class="mobileImg">
+					<img src="images/bus4tab.png" alt="Try Recycling logo" class="tabImg">
+
 				</div>
 				<div class="businessText">
 					<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
@@ -232,7 +239,8 @@
 			<div class="businesses">
 				<div class="businessesImg">
 					<img src="images/bus5.png" alt="Angling Sports Logo" class="web">
-					<img src="images/bus5mob.png" alt="Melchers logo" class="mobileImg">
+					<img src="images/bus5mob.png" alt="Angling Sports logo" class="mobileImg">
+					<img src="images/bus5tab.png" alt="Angling Sports logo" class="tabImg">
 				</div>
 				<div class="businessText">
 					<p>Before we could take the trailer to Try Recycling, we needed to get the spare tire for the trailer fixed. Pat Devincenzo, proprietor of Angling Sports, offered to get it repaired. Turns out the tire needed replacing and Pat took care of it.
