--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,10 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js"></script>
 </head>
+
 <body>
 <div id="siteContainer">
 	<h1 class="hidden">Thames River Anglers Association</h1>
@@ -63,6 +66,7 @@
 					<div class="projImgs">
 					<img src="images/proj2.png" alt="trout close up" class="web">
 					<img src="images/proj2tab.png" alt="trout close up" class="mobileImg">
+					<img src="images/proj2tab.png" alt="trout close up" class="tabImg">
 					</div>
 					<div class="projBottom2"><h3>Salmonid Monitoring Program</h3>
 					<p> Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program...</p>
@@ -74,6 +78,7 @@
 					<div class="projImgs">
 					<img src="images/proj3.png" alt="hatchery building" class="web">
 					<img src="images/proj3tab.png" alt="hatchery building" class="mobileImg">
+					<img src="images/proj3tab.png" alt="hatchery building" class="tabImg">
 					</div>
 					<div class="projBottom2"><h3>TRAA Trout Hatchery</h3>	
 					<p> Rearing both brown and rainbow trout.
