added js scroll, finalized all responsive design

--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
 			 <div class="announcements">
 				<div class="announcementImg"><img src="images/ann1.png" alt="fishing" class="web">
 				<img src="images/ann1mob.png" alt="fishing" class="mobileImg">
+				<img src="images/ann1tab.png" alt="fishing" class="tabImg">
 				</div>
-				<div class="subtitle">
+				<div class="subtitle announcementTitle">
 					<h2>TRAA General Meeting 7:00PM - Wednesday, January 9, 2019</h2>
 				</div>
 				<div class="announcement">
@@ -119,9 +120,10 @@
 			</div>
 
 				<div class="announcements">
-				<div class="announcementImg"><img src="images/ann2.png" alt="fishing" class="web">
-				<img src="images/ann2mob.png" alt="fishing" class="mobileImg"></div>
-				<div class="subtitle">
+				<div class="announcementImg"><img src="images/ann2.png" alt="eggs" class="web">
+				<img src="images/ann2mob.png" alt="eggs" class="mobileImg">
+				<img src="images/ann2tab.png" alt="eggs" class="tabImg"></div>
+				<div class="subtitle announcementTitle">
 					<h2>TRAA Trout Hatchery: Brown Trout Eggs Arriving Soon!</h2>
 				</div>
 				<div class="announcement">
@@ -134,8 +136,9 @@
 			</div>
 				<div class="announcements">
 				<div class="announcementImg"><img src="images/ann3.png" alt="rod building" class="web">
-				<img src="images/ann3mob.png" alt="fishing" class="mobileImg"></div>
-				<div class="subtitle">
+				<img src="images/ann3mob.png" alt="rod building" class="mobileImg">
+				<img src="images/ann3tab.png" alt="rod building" class="tabImg"></div>
+				<div class="subtitle announcementTitle">
 					<h2>Rod Building - Your First Time
 					<br>7:00PM - Mondays, February 18 through March 11, 2019</h2>
 				</div>
@@ -150,8 +153,9 @@
 			</div>
 		<div class="announcements">
 				<div class="announcementImg"><img src="images/ann4.png" alt="cleanup" class="web">
-				<img src="images/ann4mob.png" alt="fishing" class="mobileImg"></div>
-				<div class="subtitle">
+				<img src="images/ann4mob.png" alt="cleanup" class="mobileImg">
+				<img src="images/ann4tab.png" alt="cleanup" class="tabImg"></div>
+				<div class="subtitle announcementTitle">
 					<h2>Stream Habitat Work Party
 					<br>Took place on Saturday, October 13, 2018</h2>
 				</div>
@@ -163,9 +167,9 @@
 			</div>
 		<div class="announcements">
 				<div class="announcementImg"><img src="images/ann5.png" alt="Merch" class="web">
-				<img src="images/ann5mob.png" alt="fishing" class="mobileImg">
-				</div>
-				<div class="subtitle">
+				<img src="images/ann5mob.png" alt="merch" class="mobileImg">
+				<img src="images/ann5tab.png" alt="merch" class="tabImg"></div>
+				<div class="subtitle announcementTitle">
 					<h2>TRAA Gear is now available!
 					<br>Tee shirts, hats and stickers.</h2>
 				</div>
@@ -179,11 +183,10 @@
 					<p>Get your TRAA Gear (makes a great Christmas gift!) at any TRAA event, such as this coming General Meeting.</p>
 				</div>
 			</div>
-		</div> 
+		</div>
 
 	<div class="divider"></div>
 
-	<div class="extraSpace">
 		<div id="businesses">
 			<div class="title">
 				<h2>LOCAL BUSINESSES STEP UP TO HELP OUT THE TRAA</h2>
@@ -249,14 +252,13 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
 	<div class="divider"></div>
 
 <div class="extraSpace">
 	<div class="committee">
 		<div class="title">
-			<h2 class="title">TRAA EXECUTIVES</h2>
+			<h2 class="title committee">TRAA EXECUTIVES</h2>
 		</div>
 		
 		<div class="committees">
@@ -275,7 +277,7 @@
 <div class="extraSpace">
 	<div class="committee">
 
-			<h2 class="title">TRAA VOLUNTEER COMMITTEE CHAIRS</h2>
+			<h2 class="title committee">TRAA VOLUNTEER COMMITTEE CHAIRS</h2>
 
 		<div class="committees">
 			<div class="members">
@@ -311,6 +313,7 @@
 
 
 	<div class="divider mobileImg"></div>
+	<div class="divider tabImg"></div>
 
 	<div id="footer">
 		<div id="footerNav">
@@ -331,8 +334,6 @@
 			<button id="return">Return to Top</button>
 		</div>
 	</div>
-
-</div>
 
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
