--- a/projects.html
+++ b/projects.html
@@ -145,6 +145,7 @@
 </div>
 	
 	<div class="divider mobileImg"></div>
+	<div class="divider tabImg"></div>
 
 		<div id="footer">
 		<div id="footerNav">
