--- a/Events.html
+++ b/Events.html
@@ -206,6 +206,7 @@
 </div>
 		
 <div class="divider mobileImg"></div>
+<div class="divider tabImg"></div>
 	
 	<div id="footer">
 		<div id="footerNav">
