--- a/more.html
+++ b/more.html
@@ -230,6 +230,7 @@
 </div>
 	
 	<div class="divider mobileImg"></div>
+	<div class="divider tabImg"></div>
 	
 	<div id="footer">
 		<div id="footerNav">
