finalized responsiveness FOR SURE

--- a/Events.html
+++ b/Events.html
@@ -12,18 +12,11 @@
 </head>
 <body>
 <div id="siteContainer">
-
-	<h1 class="hidden">Thames River Anglers Association</h1>
-
-
+<h1 class="hidden">Thames River Anglers Association</h1>
 <header id="mainHeader">
 	<nav id="mainNav">
 		<h2 class="hidden">Main Navigation</h2>
 		<button id="burger"></button>
-		
-		<div id="logoContainer">
-		<img src="images/traa_logo.svg" alt=" traa logo">
-		</div>
 
 		<div id="burgerCon">
 			<ul id="burgerMenu">
@@ -38,6 +31,10 @@
 					<input type="search" placeholder="Search...">
 					<input type="submit" name="search">
 				</form>
+		</div>
+
+		<div id="logoContainer">
+			<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 	</header>
 </nav>
@@ -139,7 +136,7 @@
 				<img src="images/event18.png" alt="steelhead fish" class="eventImg web event18">
 				<img src="images/event18mob.png" alt="broken roof" class="eventImg mobileImg event18">	
 				<img src="images/event18tab.png" alt="trees" class="eventImg tabImg event18">
-					<p id="eventTitle16">TRAA Presents Film <br>DamNation @ Wolfe <br>Performance Hall, <br>June 18 2015</p>
+					<p id="eventTitle16">TRAA Presents Film DamNation @ Wolfe Performance Hall, <br>June 18 2015</p>
 					<p id="eventTitle17">Rainbox Trout Release, <br>June 22 2015</p>
 					<p id="eventTitle18">Steelhead Tagging and Monitoring Finish</p>
 					<a href="#" class="eventButtons evButton16">See More</a>
