starting javascript for gallery

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 	<div class="extraSpace">
 		<div id="about">
-			<div class="title">
+			<div class="title aboutTitle">
 				<h2>ABOUT THE TRAA</h2>
 			</div>
 			<div id="about1">
@@ -51,6 +51,8 @@
 					<img src="images/about1mob.png" alt="river clean-up" class="mobileImg">
 					<img src="images/about1tab.png" alt="river clean-up" class="tabImg">
 					<img src="images/about2.png" alt="scenic river release" class="web">
+					<img src="images/about5.png" alt="lake" class="web">
+
 				</div>
 				<div id="about1TextCon">
 						<div id="subtitle"><h3>The Thames River Anglers Association Works at a Grassroots Level Within the Thames River Watershed to...</h3></div>
@@ -64,6 +66,7 @@
 				<div class="aboutImageCon">
 					<img src="images/about2mob.png" alt="scenic river release" class="mobileImg">
 					<img src="images/about2tab.png" alt="scenic river release" class="tabImg">
+
 				</div>
 			</div>
 		</div>
