--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
 			</div>
 			<div id="contactTop">
 				<div class="contImageCon">
-					<img src="images/cont1.png" alt="traa members" class="web">
-					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
-					<img src="images/cont1tab.png" alt="traa members" class="tabImg">
+					<img src="images/cont3.png" alt="geese" class="web">
+					<img src="images/cont3mob.png" alt="geese" class="mobileImg">
+					<img src="images/cont3tab.png" alt="traa members" class="tabImg">
 					<img src="images/cont2.png" alt="foggy lake" class="web">
 				</div>
 				<div id="cont1TextCon">
@@ -127,7 +127,6 @@
 					<img src="images/cont1.png" alt="traa members" class="web">
 					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
 					<img src="images/cont1tab.png" alt="traa members" class="tabImg">
-					<img src="images/cont2.png" alt="foggy lake"  class="web">
 				</div>
 				<div id="memTextCon">
 						<div class="subtitle memsub"><h3>This is the BEST membership deal you can buy!</h3></div>
