--- a/more.html
+++ b/more.html
@@ -183,6 +183,23 @@
 				</div>
 		</div>
 	</div>
+</div>
+
+<div class="divider"></div>
+
+<div class="galleryCon">
+	<div class="main-image">
+		<img src="images/gallery1.png" id="current" alt="image">
+	</div>
+
+	<div class="galleryImgs">
+		<img src="images/gallery1.png" alt="image">
+		<img src="images/gallery2.png" alt="image">
+		<img src="images/gallery3.png" alt="image">
+		<img src="images/gallery4.png" alt="image">
+		<img src="images/gallery5.png" alt="image">
+		<img src="images/gallery6.png" alt="image">
+	</div>
 </div> 
 
 <div class="divider"></div>
