finished js and 99 % done. just need to add merch.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
 
 		<div class="hero">
 
-			<div id="heroSlogan"><p>Welcome to the Thames River Anglers Association</p>
-			<p>Dedication Today for Tomorrow</p></div>
+			<div class="heroSlogan"><p>Welcome to the Thames River Anglers Association</p>
 			</div>
+				<center><iframe src="https://www.youtube.com/embed/Gu3W1OqNVK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+			<div class="heroSlogan"><p>Dedication Today for Tomorrow</p></div>
+			</div>
+			
+			<div class="divider"></div>
 
 			<div id="missionBG">
 			<div id="heroText">
