--- a/more.html
+++ b/more.html
@@ -187,20 +187,24 @@
 
 <div class="divider"></div>
 
-<div class="galleryCon">
-	<div class="main-image">
-		<img src="images/gallery1.png" id="current" alt="image">
-	</div>
-
-	<div class="galleryImgs">
-		<img src="images/gallery1.png" alt="image">
-		<img src="images/gallery2.png" alt="image">
-		<img src="images/gallery3.png" alt="image">
-		<img src="images/gallery4.png" alt="image">
-		<img src="images/gallery5.png" alt="image">
-		<img src="images/gallery6.png" alt="image">
-	</div>
-</div> 
+<div class="extraSpace">
+		<div class="title">
+			<H2>THAMES RIVER WILDERNESS GALLERY</H2>
+		</div>
+	<div class="galleryCon">
+		<div class="main-image">
+			<center><img src="images/gallery1.png" class="current" alt="image"></center> <!--yes we're aware that <center> is bad practice but the image WOULD NOT center at all with any CSS.... not like we're going to be web designers anyway.-->
+		</div>
+		<div class="galleryImgs">
+			<img src="images/gallery1.png" alt="image" class="gal">
+			<img src="images/gallery2.png" alt="image" class="gal">
+			<img src="images/gallery3.png" alt="image" class="gal">
+			<img src="images/gallery4.png" alt="image" class="gal">
+			<img src="images/gallery5.png" alt="image" class="gal">
+			<img src="images/gallery6.png" alt="image" class="gal">
+		</div>
+	</div> 
+</div>	
 
 <div class="divider"></div>
 
