--- a/more.html
+++ b/more.html
@@ -193,8 +193,9 @@
 				<h2>TRAA MERCH</h2>
 			</div>
 			<div id="merchItems">
-
+				<img src="images/merch2.jpg" alt="poncho" class="merch">
 				<img src="images/merch1.png" alt="poncho" class="merch">
+				<img src="images/merch3.jpg" alt="poncho" class="merch">
 			</div>
 			<div id="merchText">
 				Buy your Thames River Anglers Association Merch today! We have bucket hats for $20, perfect for protection from the sun! Tired of not being able to go out and have fun because it's raining? Snag a heavy duty rain poncho for $45! Wanna enjoy something hot or cool while you're out? We even have thermostats! And of course, as you hopefully seen in our announcements, we have T-shirts, ball cap hats, and stickers for sale as well.
